ajout des fichiers act_report.html et wrangle_report.html

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -8,10 +8,10 @@
    },
    "source": [
     "# Préparation des données\n",
-    "1. Etape 1 : Collecte des données\n",
-    "2. Etape 2 : Evaluation des données\n",
-    "3. Etape 3 : Netoyage des données\n",
-    "4. Etape 4 : Analyse et Visualisation"
+    "1. Étape 1 : Collecte des données\n",
+    "2. Étape 2 : Evaluation des données\n",
+    "3. Étape 3 : Netoyage des données\n",
+    "4. Étape 4 : Analyse et Visualisation"
    ]
   },
   {
@@ -19,7 +19,7 @@
    "id": "1f612151-b26c-47b2-a61d-d8ce404dcb27",
    "metadata": {},
    "source": [
-    "## Etape 1 : Collecte des données\n",
+    "## Étape 1 : Collecte des données\n",
     "1. Les archives Twitter de WeRateDogs\n",
     "2. Les prédictions de l’image tweet\n",
     "3. Données supplémentaires de l’API Twitter"
@@ -3421,7 +3421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 84,
    "id": "ce6da8b8-1a04-4420-9cde-95031fb5038c",
    "metadata": {},
    "outputs": [],
